--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="F:/Downloads/spigot-1.15.2.jar"/>
-	<classpathentry kind="lib" path="F:/Downloads/Vault.jar"/>
+	<classpathentry kind="lib" path="F:/Downloads/spigot-1.16.4.jar"/>
+	<classpathentry kind="lib" path="F:/Downloads/TopShop_deps/Vault.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
